--- a/src/Umbraco.Web.UI/web.Template.config
+++ b/src/Umbraco.Web.UI/web.Template.config
@@ -268,6 +268,12 @@
             <httpErrors existingResponse="Auto" />
         </system.webServer>
     </location>
+    <location path="install">
+        <system.webServer>
+            <urlCompression doStaticCompression="false" doDynamicCompression="false" dynamicCompressionBeforeCache="false" />
+            <httpErrors existingResponse="Auto" />
+        </system.webServer>
+    </location>
 
     <imageProcessor>
         <security configSource="config\imageprocessor\security.config" />
