--- a/src/Umbraco.Web/Umbraco.Web.csproj
+++ b/src/Umbraco.Web/Umbraco.Web.csproj
@@ -237,6 +237,9 @@
     <Compile Include="Mvc\ValidateUmbracoFormRouteStringAttribute.cs" />
     <Compile Include="Profiling\WebProfilingController.cs" />
     <Compile Include="PropertyEditors\BlockEditorPropertyEditor.cs" />
+    <Compile Include="PropertyEditors\BlockGridConfiguration.cs" />
+    <Compile Include="PropertyEditors\BlockGridConfigurationEditor.cs" />
+    <Compile Include="PropertyEditors\BlockGridPropertyEditor.cs" />
     <Compile Include="PropertyEditors\BlockListConfiguration.cs" />
     <Compile Include="PropertyEditors\BlockListConfigurationEditor.cs" />
     <Compile Include="PropertyEditors\BlockListPropertyEditor.cs" />
